general ui changes changed font size to 16px ~for heavy tet and 20px for the other texts (besides titles) changed products cards (same as category cards) fixed category cards issue (not being displayed properly) for desktop (hopefully i haven't fucked it up on mobile view)

--- a/catalog/static/css/style.css
+++ b/catalog/static/css/style.css
@@ -10,6 +10,7 @@ body {
     background-color: #F5F9FF;
     color: #404756;
     font-family: 'Open Sans';
+    font-size: 1rem;
     padding-top: 5.5rem;
     display: flex;
     flex-flow: column;
@@ -84,7 +85,7 @@ body > section:last-of-type {
 }
 
 .sticky {
-  font-size: 14px !important;
+  font-size: 1rem !important;
 }
 
 .sticky img {
@@ -222,7 +223,7 @@ body > section:last-of-type {
   list-style: none;
   padding: 0;
   margin: 0;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .breadcrumbs ol li + li {
@@ -250,6 +251,18 @@ body > section:last-of-type {
     display: inline-block;
   }
 
+}
+
+/* Back button */
+
+#back-button {
+  padding-bottom: 3rem;
+  font-size: 1rem;
+}
+
+#back-button i {
+  padding-right: 0.25rem;
+  vertical-align: middle;
 }
 
 /* Categories */
@@ -512,35 +525,25 @@ body > section:last-of-type {
   padding: 0;
 }
 
-#products .card {
-  position: relative;
-}
-
-#products .product-container {
-  max-height: 250px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+#products .card, #products .row {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #products .card-img-top {
-  object-fit: cover;
+  object-fit: contain;
+  height: 200px;
 }
 
-#products .card-title {
+#products .card-body {
   background-color: #1378CE;
   color: #F5F9FF;
-  opacity: 60%;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  margin: 0;
   font-weight: bold;
   font-size: 1.25rem;
 }
 
-#products a:hover .card-title {
-  background-color: #1378CE;
-  opacity: 100%;
+#products .card-title {
+  margin-bottom: 0;
 }
 
 #category-info .card {
@@ -548,7 +551,7 @@ body > section:last-of-type {
   border: none;
   border-radius: 0;
   color: #F5F9FF;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 #category-info .row {
@@ -625,7 +628,7 @@ body > section:last-of-type {
   border: none;
   border-radius: 0;
   color: #F5F9FF;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 #product-info #external-link {
@@ -668,6 +671,10 @@ body > section:last-of-type {
   align-items: center;
   padding-bottom: 1rem;
   justify-content: center;
+}
+
+#getOfferModal .modal-title {
+  font-size: 1.25rem;
 }
 
 .getOfferForm-body input[type="checkbox"] {
